[package]
name = "main"
version = "0.1.0"
authors = ["Chrys Adams <foolsinabucket@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db_connector = { path = "../db_connector" }
serde_json = "1.0"
bson = "^0.14.1"
